--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,14 +83,14 @@ jobs:
     - name: Install Dependencies
       run: |
         sudo apt-get update -y -qq
-        sudo apt-get install -y libglfw3-dev libsdl2-dev libopenal-dev
+        sudo apt-get install -y libglfw3-dev libopenal-dev
         sudo apt remove --purge --auto-remove cmake
         wget -q https://github.com/Kitware/CMake/releases/download/v3.15.5/cmake-3.15.5-Linux-x86_64.tar.gz
         tar -zxvf cmake-3.15.5-Linux-x86_64.tar.gz        
     - name: Build
       run: |
         export PATH="./cmake-3.15.5-Linux-x86_64/bin:$PATH"
-        cmake -S. -BPrjLinux -DBUILD_SDL=true
+        cmake -S. -BPrjLinux
         cd Assets
         python BuildAssetBundles.py
         cd ..
