--- a/Samples/Physics/CMakeLists.txt
+++ b/Samples/Physics/CMakeLists.txt
@@ -1,5 +1,6 @@
 include_directories(
-	${SKYLICHT_ENGINE_SOURCE_DIR}/@project_path@/Source
+	${SKYLICHT_ENGINE_SOURCE_DIR}/Samples/Physics/Source
+	${SKYLICHT_ENGINE_SOURCE_DIR}/Samples/SampleFW
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Main/Source
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Irrlicht/Include
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/System/Source
@@ -23,7 +24,9 @@ set(template_path ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Main)
 file(GLOB_RECURSE application_source 
 	./Source/**.cpp 
 	./Source/**.c 
-	./Source/**.h)
+	./Source/**.h
+	../SampleFW/**.cpp
+	../SampleFW/**.h)
 
 setup_project_group("${application_source}" ${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -40,24 +43,24 @@ if (BUILD_ANDROID)
 endif()
 
 if (BUILD_WINDOWS_STORE)
-	file(MAKE_DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/@project_path@)
-	file(MAKE_DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/@project_path@/Assets)
+	file(MAKE_DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/Physics)
+	file(MAKE_DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/Physics/Assets)
 	
 	file(GLOB uwp_assets 
 		${template_path}/Platforms/UWP/Assets/**.*
 		${SKYLICHT_ENGINE_SOURCE_DIR}/Bin/**.zip)
 	
 	foreach(asset_file ${uwp_assets})
-		file(COPY "${asset_file}" DESTINATION ${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/@project_path@/Assets)
+		file(COPY "${asset_file}" DESTINATION ${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/Physics/Assets)
 	endforeach()
 
 	file(COPY ${template_path}/Platforms/UWP/Package.appxmanifest
 		DESTINATION 
-		${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/@project_path@)
+		${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/Physics)
 		
 	file(COPY ${template_path}/Platforms/UWP/TemporaryKey.pfx
 		DESTINATION 
-		${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/@project_path@)
+		${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/Physics)
 
 	file(GLOB_RECURSE platform_uwp_source 
 		${template_path}/Platforms/UWP/**.cpp 
@@ -65,7 +68,7 @@ if (BUILD_WINDOWS_STORE)
 		${template_path}/Platforms/UWP/**.h)
 	
 	# copy resource to generate prj folder
-	file(GLOB_RECURSE platform_uwp_asset ${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/@project_path@/Assets/**.*)
+	file(GLOB_RECURSE platform_uwp_asset ${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/Physics/Assets/**.*)
 	add_source_group("${platform_uwp_asset}" "Assets")
 	
 	list (APPEND application_source ${platform_uwp_source})
@@ -162,31 +165,31 @@ if (MINGW OR CYGWIN)
 endif()
 
 if (BUILD_EMSCRIPTEN)
-	add_executable(@project_name@ 
+	add_executable(SamplePhysics 
 		${application_source}
 		${template_path}/Platforms/Emscripten/MainWebGL.cpp
 	)
 elseif(BUILD_SDL)
-	add_executable(@project_name@ 
+	add_executable(SamplePhysics 
 		${application_source}
 		${template_path}/Platforms/SDL2/MainSDL.cpp
 	)
 elseif(BUILD_LINUX)
-	add_executable(@project_name@ 
+	add_executable(SamplePhysics 
 		${application_source}
 		${template_path}/Platforms/Linux/MainLinux.cpp
 	)
 elseif(BUILD_ANDROID)
-	add_library(@project_name@ SHARED ${application_source})
+	add_library(SamplePhysics SHARED ${application_source})
 elseif (BUILD_WINDOWS_STORE)
-	add_executable(@project_name@
+	add_executable(SamplePhysics
 		${application_source}
 		${platform_uwp_asset}
-		${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/@project_path@/TemporaryKey.pfx
-		${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/@project_path@/Package.appxmanifest
+		${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/Physics/TemporaryKey.pfx
+		${SKYLICHT_ENGINE_SOURCE_DIR}/PrjUWP/Samples/Physics/Package.appxmanifest
 	)
 elseif (MSVC OR CYGWIN OR MINGW)
-	add_executable(@project_name@ WIN32
+	add_executable(SamplePhysics WIN32
 		${application_source}
 		${template_path}/Platforms/Win32/Skylicht.rc
 	)
@@ -196,17 +199,17 @@ elseif (BUILD_MACOS)
 	set(angle_lib_path "${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Angle/out/MacOS/Release/${CMAKE_OSX_ARCHITECTURES}")
 	file(GLOB dylib_files "${angle_lib_path}/*.dylib")
 
-	add_executable(@project_name@ 
+	add_executable(SamplePhysics 
 		${application_source} 
 		${resources_files}
 		${dylib_files}
 	)
 	
-	set_target_properties(@project_name@ PROPERTIES MACOSX_BUNDLE TRUE)
+	set_target_properties(SamplePhysics PROPERTIES MACOSX_BUNDLE TRUE)
 	
-	target_link_libraries(@project_name@ "-framework Cocoa")
+	target_link_libraries(SamplePhysics "-framework Cocoa")
 		
-	message(STATUS "- Setup project: @project_name@")
+	message(STATUS "- Setup project: SamplePhysics")
 	foreach(res_file ${resources_files})
 		file(RELATIVE_PATH res_path "${SKYLICHT_ENGINE_SOURCE_DIR}/Bin" ${res_file})
 		message(STATUS "  - Add resources: ${res_path}")
@@ -220,26 +223,26 @@ elseif (BUILD_MACOS)
 		source_group("Libs" FILES "${lib_file}")
 	endforeach()
 
-	add_custom_command(TARGET @project_name@ 
+	add_custom_command(TARGET SamplePhysics 
 		POST_BUILD COMMAND 
 		${CMAKE_INSTALL_NAME_TOOL} -change ./libEGL.dylib @rpath/libEGL.dylib
-		$<TARGET_FILE:@project_name@>)
+		$<TARGET_FILE:SamplePhysics>)
 
-	add_custom_command(TARGET @project_name@ 
+	add_custom_command(TARGET SamplePhysics 
 		POST_BUILD COMMAND 
 		${CMAKE_INSTALL_NAME_TOOL} -change ./libGLESv2.dylib @rpath/libGLESv2.dylib
-		$<TARGET_FILE:@project_name@>)
+		$<TARGET_FILE:SamplePhysics>)
 
-	set_target_properties(@project_name@ PROPERTIES
+	set_target_properties(SamplePhysics PROPERTIES
 		MACOSX_RPATH ON
 		BUILD_WITH_INSTALL_RPATH 1
 		INSTALL_RPATH "@executable_path/../Frameworks"
 	)
 elseif (BUILD_IOS)
-	set(MACOSX_BUNDLE_EXECUTABLE_NAME @project_name@)
+	set(MACOSX_BUNDLE_EXECUTABLE_NAME SamplePhysics)
 
-	set(APP_NAME "@project_name@")
-	set(APP_BUNDLE_IDENTIFIER "com.team_name.project_name")
+	set(APP_NAME "SamplePhysics")
+	set(APP_BUNDLE_IDENTIFIER "com.skylicht.samplephysics")
 	set(CODE_SIGN_IDENTITY "iPhone Developer")
 
 	set(PRODUCT_NAME ${APP_NAME})
@@ -256,14 +259,14 @@ elseif (BUILD_IOS)
 	set (framework_files "")
 	list (APPEND framework_files ${angle_framework_files})
 
-	add_executable(@project_name@ MACOSX_BUNDLE 
+	add_executable(SamplePhysics MACOSX_BUNDLE 
 		${application_source}
 		${resources_files}
 		${platform_ios_resources}
 		${framework_files}
 	)
 	
-	message(STATUS "- Setup project: @project_name@")
+	message(STATUS "- Setup project: SamplePhysics")
 	foreach(res_file ${resources_files})
 		file(RELATIVE_PATH res_path "${SKYLICHT_ENGINE_SOURCE_DIR}/Bin" ${res_file})
 		source_group("Bin" FILES "${res_file}")
@@ -273,44 +276,44 @@ elseif (BUILD_IOS)
 		source_group("Frameworks" FILES "${lib_file}")
 	endforeach()
 
-	set_target_properties(@project_name@ PROPERTIES XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER ${APP_BUNDLE_IDENTIFIER})
-	set_target_properties(@project_name@ PROPERTIES XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY ${CODE_SIGN_IDENTITY})
-	set_target_properties(@project_name@ PROPERTIES XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY ${DEVICE_FAMILY})
-	set_target_properties(@project_name@ PROPERTIES MACOSX_BUNDLE_INFO_PLIST "${template_path}/Platforms/IOS/plist.in")
+	set_target_properties(SamplePhysics PROPERTIES XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER ${APP_BUNDLE_IDENTIFIER})
+	set_target_properties(SamplePhysics PROPERTIES XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY ${CODE_SIGN_IDENTITY})
+	set_target_properties(SamplePhysics PROPERTIES XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY ${DEVICE_FAMILY})
+	set_target_properties(SamplePhysics PROPERTIES MACOSX_BUNDLE_INFO_PLIST "${template_path}/Platforms/IOS/plist.in")
 	
 	# add assets icon
-	target_sources(@project_name@ PRIVATE "${template_path}/Platforms/IOS/Assets.xcassets")
+	target_sources(SamplePhysics PRIVATE "${template_path}/Platforms/IOS/Assets.xcassets")
 	
 	list (APPEND platform_ios_resources "${template_path}/Platforms/IOS/Assets.xcassets")
-	set_target_properties(@project_name@ PROPERTIES RESOURCE "${resources_files} ${platform_ios_resources}")
+	set_target_properties(SamplePhysics PROPERTIES RESOURCE "${resources_files} ${platform_ios_resources}")
 
 
 	# embed .framework
-	set_target_properties(@project_name@ PROPERTIES XCODE_EMBED_FRAMEWORKS "${framework_files}")
+	set_target_properties(SamplePhysics PROPERTIES XCODE_EMBED_FRAMEWORKS "${framework_files}")
 
 	# link framework
-	target_link_libraries(@project_name@ "-framework UIKit")
-	target_link_libraries(@project_name@ "-framework CoreGraphics")
-	target_link_libraries(@project_name@ "-framework Metal")
-	target_link_libraries(@project_name@ "-framework MetalKit")
-	target_link_libraries(@project_name@ "-framework AudioToolbox")
-	target_link_libraries(@project_name@ "-framework AVFAudio")
+	target_link_libraries(SamplePhysics "-framework UIKit")
+	target_link_libraries(SamplePhysics "-framework CoreGraphics")
+	target_link_libraries(SamplePhysics "-framework Metal")
+	target_link_libraries(SamplePhysics "-framework MetalKit")
+	target_link_libraries(SamplePhysics "-framework AudioToolbox")
+	target_link_libraries(SamplePhysics "-framework AVFAudio")
 else()
-	add_executable(@project_name@ ${application_source})
+	add_executable(SamplePhysics ${application_source})
 endif()
 
-target_precompiled_header(@project_name@ ${template_path}/Source/pch.cpp ${application_source})
+target_precompiled_header(SamplePhysics ${template_path}/Source/pch.cpp ${application_source})
 
 # Linker
 if (BUILD_ANDROID)
-	target_link_libraries(@project_name@ Client log)
+	target_link_libraries(SamplePhysics Client log)
 else()
-	target_link_libraries(@project_name@ Client)
+	target_link_libraries(SamplePhysics Client)
 endif()
 
 # Imgui
 if (BUILD_IMGUI)
-	target_link_libraries(@project_name@ Imgui)
+	target_link_libraries(SamplePhysics Imgui)
 endif()
 
 # Emscripten
@@ -320,18 +323,18 @@ if (BUILD_EMSCRIPTEN)
 	
 	message(STATUS "Setting compilation target to WASM")
 	set(CMAKE_EXECUTABLE_SUFFIX ".wasm.html")
-	set_target_properties(@project_name@ PROPERTIES LINK_FLAGS "-s USE_SDL=2 -s USE_WEBGL2=1 -s FORCE_FILESYSTEM=1 -s FETCH=1 -s ALLOW_MEMORY_GROWTH=1 -s EXPORTED_FUNCTIONS=['_main','_main_resize'] -s EXPORTED_RUNTIME_METHODS=['ccall'] --preload-file ./BuiltIn --shell-file ${template_path}/Platforms/Emscripten/Shell/shell.html --memory-init-file 1 --disable-shared -s WASM=1 -s BINARYEN_METHOD='native-wasm'")
+	set_target_properties(SamplePhysics PROPERTIES LINK_FLAGS "-s USE_SDL=2 -s USE_WEBGL2=1 -s FORCE_FILESYSTEM=1 -s FETCH=1 -s ALLOW_MEMORY_GROWTH=1 -s EXPORTED_FUNCTIONS=['_main','_main_resize'] -s EXPORTED_RUNTIME_METHODS=['ccall'] --preload-file ./BuiltIn --shell-file ${template_path}/Platforms/Emscripten/Shell/shell.html --memory-init-file 1 --disable-shared -s WASM=1 -s BINARYEN_METHOD='native-wasm'")
 	
-	set(project_name @project_name@)
+	set(project_name SamplePhysics)
 	configure_file(${template_path}/Platforms/Emscripten/Index.html ${SKYLICHT_ENGINE_SOURCE_DIR}/Bin/Index.html)
-	configure_file(${template_path}/Platforms/Emscripten/Index.html ${SKYLICHT_ENGINE_SOURCE_DIR}/Bin/@project_name@.html)
+	configure_file(${template_path}/Platforms/Emscripten/Index.html ${SKYLICHT_ENGINE_SOURCE_DIR}/Bin/SamplePhysics.html)
 endif()
 
 #VLD
 if (BUILD_DEBUG_VLD)
 	file(GLOB_RECURSE vld_bin_files ${vld_dll_path})
 	foreach(vld_bin ${vld_bin_files})
-		add_custom_command(TARGET @project_name@ POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different ${vld_bin} $<TARGET_FILE_DIR:@project_name@>)
+		add_custom_command(TARGET SamplePhysics POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different ${vld_bin} $<TARGET_FILE_DIR:SamplePhysics>)
 	endforeach()
 endif()
 
@@ -339,9 +342,9 @@ endif()
 if (BUILD_SDL AND MSVC)
 	file(GLOB_RECURSE sdl_bin_files ${sdl_dll_path})
 	foreach(sdl_bin ${sdl_bin_files})
-		add_custom_command(TARGET @project_name@ POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different ${sdl_bin} $<TARGET_FILE_DIR:@project_name@>)
+		add_custom_command(TARGET SamplePhysics POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different ${sdl_bin} $<TARGET_FILE_DIR:SamplePhysics>)
 	endforeach()
 endif()
 
-set_target_properties(@project_name@ PROPERTIES VERSION ${SKYLICHT_VERSION})
-set_target_properties(@project_name@ PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
+set_target_properties(SamplePhysics PROPERTIES VERSION ${SKYLICHT_VERSION})
+set_target_properties(SamplePhysics PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
